--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
     <!-- Preview ends-->
      <footer>
-        <p>All rights reserved</p>
+        <p>&copy; 2025 Blaze n' Bite. All rights reserved</p>
      </footer>
 </body>
 </html>
